# c.study

./: .gitignore  CMakeLists.txt  build.sh  hello.c  main.c  main.h  version.c
ctypes.test/: README.md  hello_module.c  index.py
golang/: go.mod  main.go
